--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.8.1",
     "antd": "^5.25.1",
     "jodit-react": "^5.2.19",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.510.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
